--- a/Suma2Lealtad/Views/Afiliado/Edit.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/Edit.cshtml
@@ -16,12 +16,13 @@
                 @Html.ValidationSummary(true)
 
                 <div id="rootwizard">
-                    <div class="nav-gradient navbar navbar-default ">
+
+                    <div class="nav-gradient navbar navbar-default">
                         <div class="nav navbar-nav">
                             <ul class="nav navbar-nav">
-                                <li><a href="#tab1" data-toggle="tab">Datos Básicos</a></li>
-                                <li><a href="#tab2" data-toggle="tab">Documentos</a></li>
-                                <li><a href="#tab3" data-toggle="tab">Temas de Interés</a></li>
+                                <li ><a href="#tab1" data-toggle="tab" class="disabled">Datos Básicos</a></li>
+                                <li ><a href="#tab2" data-toggle="tab" class="disabled">Documentos</a></li>
+                                <li ><a href="#tab3" data-toggle="tab" class="disabled">Temas de Interés</a></li>
                             </ul>
                         </div>
                     </div>
@@ -48,7 +49,7 @@
                                 * Tipo de Afiliado :
                             </div>
 
-                           <div class="editor-field col-md-6">
+                            <div class="editor-field col-md-6">
                                 @Html.TextBoxFor(model => model.type, new { @class = "form-control", @readonly = "true" })
                             </div>
 
@@ -56,7 +57,7 @@
                                 * Número de Documento/Cédula :
                             </div>
 
-                           <div class="editor-field col-md-6">
+                            <div class="editor-field col-md-6">
                                 @Html.TextBoxFor(model => model.docnumber, new { @class = "form-control", @readonly = "true" })
                             </div>
 
@@ -221,7 +222,7 @@
                             </div>
                         </div>
                         <!-- //FOTO DEL DOCUMENTO DE IDENTIFICACION -->
-                       
+
 
                         <!-- DIRECCIÓN -->
                         <div class="tab-pane" id="tab3">
@@ -358,7 +359,9 @@
                             </div>
 
                             <div class="editor-label col-md-4 control-label"></div>
-                            <div class="editor-field col-md-6"><br /></div>
+                            <div class="editor-field col-md-6">
+                                <br />
+                            </div>
 
                             <div class="editor-label col-md-4 control-label"></div>
                             <div class="editor-field col-md-6">
@@ -377,15 +380,15 @@
                         <div class="editor-label col-md-4 control-label"></div>
                         <div class="editor-field col-md-6">
                             <!-- BOTONES -->
-                        <ul class="pager wizard">
+                            <ul class="pager wizard">
 
-                            <li class="previous"><a href="#">Anterior</a></li>
-                            <li class="next pull-left"><a href="#">Siguiente</a></li>
-                        </ul>
-                        <!--// BOTONES -->
+                                <li class="previous"><a href="#">Anterior</a></li>
+                                <li class="next pull-left"><a href="#">Siguiente</a></li>
+                            </ul>
+                            <!--// BOTONES -->
                         </div>
 
-                        
+
 
                         <div class="editor-label col-md-4 control-label"></div>
                         <div class="editor-field col-md-6">
