--- a/Suma2Lealtad/Views/Afiliado/PinPadCrearPin.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/PinPadCrearPin.cshtml
@@ -19,6 +19,13 @@
                 <div class="panel-body">
 
                     <div class="form-group">
+                        <div class="editor-label col-md-4 control-label">
+                            Tipo de Afiliado :
+                        </div>
+
+                        <div class="editor-field col-md-6">
+                            @Html.TextBoxFor(model => model.type, new { @class = "form-control", @readonly = "true" })
+                        </div>
 
                         <div class="editor-label col-md-4 control-label">
                             Nombre del Afiliado :
