--- a/Suma2Lealtad/Views/Afiliado/SaldosMovimientos.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/SaldosMovimientos.cshtml
@@ -38,6 +38,13 @@
                 <div class="panel-body">
 
                     <div class="form-group">
+                        <div class="editor-label col-md-4 control-label">
+                            Tipo de Afiliado :
+                        </div>
+
+                        <div class="editor-field col-md-6">
+                            @Html.TextBoxFor(model => model.Afiliado.type, new { @class = "form-control", @readonly = "true" })
+                        </div>
 
                         <div class="editor-label col-md-4 control-label">
                             Nombre del Afiliado :
@@ -232,8 +239,7 @@
             <div class="panel panel-default">
 
                 <div class="panel-heading clearfix panel-gradient">
-                    <h3 class="panel-title">Movimientos de Cuenta Suma</a>
-                    </h3>
+                    <h3 class="panel-title">Movimientos de Cuenta Suma</h3>
                 </div>
 
                 <div class="panel-body">
