--- a/Suma2Lealtad/Views/Shared/_Layout.cshtml
+++ b/Suma2Lealtad/Views/Shared/_Layout.cshtml
@@ -89,6 +89,47 @@
     <script>
     $(document).ready(function() {
 
+        $('#cod_estado').change(function () {
+            $.getJSON('/Afiliado/CiudadList/' + $('#cod_estado').val(), function (data) {
+                var items = '<option>Seleccione una Ciudad</option>';
+                $.each(data, function (i, district) {
+                    items += "<option value='" + district.Value + "'>" + district.Text + "</option>";
+                });
+                $('#COD_CIUDAD').html(items);
+            });
+        });
+
+        $('#COD_CIUDAD').change(function () {
+            $.getJSON('/Afiliado/MunicipioList/' + $('#COD_CIUDAD').val(), function (data) {
+                var items = '<option>Seleccione un Municipio</option>';
+                $.each(data, function (i, record) {
+                    items += "<option value='" + record.Value + "'>" + record.Text + "</option>";
+                });
+                $('#COD_MUNICIPIO').html(items);
+            });
+        });
+
+        $('#COD_MUNICIPIO').change(function () {
+            $.getJSON('/Afiliado/ParroquiaList/' + $('#COD_MUNICIPIO').val(), function (data) {
+                var items = '<option>Seleccione una Parroquia</option>';
+                $.each(data, function (i, record) {
+                    items += "<option value='" + record.Value + "'>" + record.Text + "</option>";
+                });
+                $('#COD_PARROQUIA').html(items);
+            });
+        });
+
+        $('#COD_PARROQUIA').change(function () {
+            $.getJSON('/Afiliado/UrbanizacionList/' + $('#COD_PARROQUIA').val(), function (data) {
+                var items = '<option>Seleccione una Urbanización</option>';
+                $.each(data, function (i, record) {
+                    items += "<option value='" + record.Value + "'>" + record.Text + "</option>";
+                });
+                $('#COD_URBANIZACION').html(items);
+            });
+        });
+
+
        $.validator.addMethod("regex", function(value, element, regexpr) {          
          return regexpr.test(value);
        }, "Ingrese un valor correcto.");
