--- a/Suma2Lealtad/Views/Afiliado/Edit.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/Edit.cshtml
@@ -253,12 +253,8 @@
                             </div>
 
                             <div class="editor-field col-md-6">
-                                <select id="COD_CIUDAD" name="DESCRIPC_CIUDAD" class = "form-control"></select>
+                                <select id="cod_ciudad" name="cod_ciudad" class = "form-control"></select>
                                 @Html.ValidationMessage("Ciudad")
-@*                                @Html.DropDownListFor(m => m.cod_ciudad,
-                                new SelectList(Model.ListaCiudades,
-                                "COD_CIUDAD", "DESCRIPC_CIUDAD",
-                                Model.ListaCiudades), new { @class = "form-control" })*@
                             </div>
 
                             <div class="editor-label col-md-4 control-label">
@@ -266,12 +262,8 @@
                             </div>
 
                             <div class="editor-field col-md-6">
-                                <select id="COD_MUNICIPIO" name="DESCRIPC_MUNICIPIO" class = "form-control"></select>
+                                <select id="cod_municipio" name="cod_municipio" class = "form-control"></select>
                                 @Html.ValidationMessage("Municipio")
-@*                                @Html.DropDownListFor(m => m.cod_municipio,
-                                new SelectList(Model.ListaMunicipios,
-                                "COD_MUNICIPIO", "DESCRIPC_MUNICIPIO",
-                                Model.ListaMunicipios), new { @class = "form-control" })*@
                             </div>
 
                             <div class="editor-label col-md-4 control-label">
@@ -279,12 +271,8 @@
                             </div>
 
                             <div class="editor-field col-md-6">
-                                <select id="COD_PARROQUIA" name="DESCRIPC_PARROQUIA" class="form-control"></select>
+                                <select id="cod_parroquia" name="cod_parroquia" class="form-control"></select>
                                 @Html.ValidationMessage("Parroquia")
-@*                                @Html.DropDownListFor(m => m.cod_parroquia,
-                                new SelectList(Model.ListaParroquias,
-                                "COD_PARROQUIA", "DESCRIPC_PARROQUIA",
-                                Model.ListaParroquias), new { @class = "form-control" })*@
                             </div>
 
                             <div class="editor-label col-md-4 control-label">
@@ -292,12 +280,8 @@
                             </div>
 
                             <div class="editor-field col-md-6">
-                                <select id="COD_URBANIZACION" name="DESCRIPC_URBANIZACION" class="form-control"></select>
+                                <select id="cod_urbanizacion" name="cod_urbanizacion" class="form-control"></select>
                                 @Html.ValidationMessage("Urbanización")
-@*                                @Html.DropDownListFor(m => m.cod_urbanizacion,
-                                new SelectList(Model.ListaUrbanizaciones,
-                                "COD_URBANIZACION", "DESCRIPC_URBANIZACION",
-                                Model.ListaUrbanizaciones), new { @class = "form-control" })*@
                             </div>
 
                             <div class="editor-label col-md-4 control-label"></div>
@@ -429,18 +413,3 @@
 
 </div>
 <!--// container -->
-
-@*@Scripts.Render("~/bundles/jquery")*@
-@*<script type="text/jscript">
-$(function () {
-    $('#cod_estado').change(function () {
-        $.getJSON('/CiudadList/' + $('#cod_estado').val(), function (data) {
-            var items = '<option>Seleccione una Ciudad</option>';
-            $.each(data, function (i, district) {
-                items += "<option value='" + district. + "'>" + district.DESCRIPC_CIUDAD + "</option>";
-            });
-            $('#COD_CIUDAD').html(items);
-        });
-    });
-});
-</script>*@
