--- a/Suma2Lealtad/Views/Shared/_Layout.cshtml
+++ b/Suma2Lealtad/Views/Shared/_Layout.cshtml
@@ -95,37 +95,37 @@
                 $.each(data, function (i, district) {
                     items += "<option value='" + district.Value + "'>" + district.Text + "</option>";
                 });
-                $('#COD_CIUDAD').html(items);
+                $('#cod_ciudad').html(items);
             });
         });
 
-        $('#COD_CIUDAD').change(function () {
-            $.getJSON('/Afiliado/MunicipioList/' + $('#COD_CIUDAD').val(), function (data) {
+        $('#cod_ciudad').change(function () {
+            $.getJSON('/Afiliado/MunicipioList/' + $('#cod_ciudad').val(), function (data) {
                 var items = '<option>Seleccione un Municipio</option>';
                 $.each(data, function (i, record) {
                     items += "<option value='" + record.Value + "'>" + record.Text + "</option>";
                 });
-                $('#COD_MUNICIPIO').html(items);
+                $('#cod_municipio').html(items);
             });
         });
 
-        $('#COD_MUNICIPIO').change(function () {
-            $.getJSON('/Afiliado/ParroquiaList/' + $('#COD_MUNICIPIO').val(), function (data) {
+        $('#cod_municipio').change(function () {
+            $.getJSON('/Afiliado/ParroquiaList/' + $('#cod_municipio').val(), function (data) {
                 var items = '<option>Seleccione una Parroquia</option>';
                 $.each(data, function (i, record) {
                     items += "<option value='" + record.Value + "'>" + record.Text + "</option>";
                 });
-                $('#COD_PARROQUIA').html(items);
+                $('#cod_parroquia').html(items);
             });
         });
 
-        $('#COD_PARROQUIA').change(function () {
-            $.getJSON('/Afiliado/UrbanizacionList/' + $('#COD_PARROQUIA').val(), function (data) {
+        $('#cod_parroquia').change(function () {
+            $.getJSON('/Afiliado/UrbanizacionList/' + $('#cod_parroquia').val(), function (data) {
                 var items = '<option>Seleccione una Urbanización</option>';
                 $.each(data, function (i, record) {
                     items += "<option value='" + record.Value + "'>" + record.Text + "</option>";
                 });
-                $('#COD_URBANIZACION').html(items);
+                $('#cod_urbanizacion').html(items);
             });
         });
 
