--- a/Suma2Lealtad/Views/Shared/_Layout.cshtml
+++ b/Suma2Lealtad/Views/Shared/_Layout.cshtml
@@ -91,7 +91,7 @@
 
         $('#cod_estado').change(function () {
             $.getJSON('/Afiliado/CiudadList/' + $('#cod_estado').val(), function (data) {
-                var items = '<option>Seleccione una Ciudad</option>';
+                var items = '<option value=" ">Seleccione una Ciudad</option>';
                 $.each(data, function (i, district) {
                     items += "<option value='" + district.Value + "'>" + district.Text + "</option>";
                 });
@@ -101,7 +101,7 @@
 
         $('#cod_ciudad').change(function () {
             $.getJSON('/Afiliado/MunicipioList/' + $('#cod_ciudad').val(), function (data) {
-                var items = '<option>Seleccione un Municipio</option>';
+                var items = '<option value=" ">Seleccione un Municipio</option>';
                 $.each(data, function (i, record) {
                     items += "<option value='" + record.Value + "'>" + record.Text + "</option>";
                 });
@@ -111,7 +111,7 @@
 
         $('#cod_municipio').change(function () {
             $.getJSON('/Afiliado/ParroquiaList/' + $('#cod_municipio').val(), function (data) {
-                var items = '<option>Seleccione una Parroquia</option>';
+                var items = '<option value=" ">Seleccione una Parroquia</option>';
                 $.each(data, function (i, record) {
                     items += "<option value='" + record.Value + "'>" + record.Text + "</option>";
                 });
@@ -121,7 +121,7 @@
 
         $('#cod_parroquia').change(function () {
             $.getJSON('/Afiliado/UrbanizacionList/' + $('#cod_parroquia').val(), function (data) {
-                var items = '<option>Seleccione una Urbanización</option>';
+                var items = '<option value=" ">Seleccione una Urbanización</option>';
                 $.each(data, function (i, record) {
                     items += "<option value='" + record.Value + "'>" + record.Text + "</option>";
                 });
