--- a/Suma2Lealtad/Views/Afiliado/Edit.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/Edit.cshtml
@@ -241,10 +241,6 @@
                                 new SelectList(Model.ListaEstados,
                                 "COD_ESTADO", "DESCRIPC_ESTADO",
                                 Model.ListaEstados), new { @class = "form-control" })
-@*                                @Html.DropDownListFor(m => m.cod_estado,
-                                new SelectList(Model.EstadoOptions,
-                                "id", "estado",
-                                Model.EstadoOptions), new { @class = "form-control" })*@
                             </div>
 
                             <div class="editor-label col-md-4 control-label">
@@ -286,9 +282,9 @@
 
                             <div class="editor-field col-md-6">
                                 @Html.DropDownListFor(m => m.cod_urbanizacion,
-                                new SelectList(Model.ListaMunicipios,
-                                "cod_municipio", "descripc_municipio",
-                                Model.ListaMunicipios), new { @class = "form-control" })
+                                new SelectList(Model.ListaUrbanizaciones,
+                                "cod_urbanizacion", "descripc_urbanizacion",
+                                Model.ListaUrbanizaciones), new { @class = "form-control" })
                             </div>
 
                             <div class="editor-label col-md-4 control-label"></div>
