--- a/Suma2Lealtad/Views/Home/Index.cshtml
+++ b/Suma2Lealtad/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
             <div class="panel-heading clearfix">
 
                 <div class="editor-label" align="center">
-                    <img src=@Url.Content("~/Images/conectado.jpg") />
+                    <img src="@Url.Content("~/Images/conectado.jpg")" />
                 </div>
 
             </div>
@@ -18,5 +18,7 @@
         </div>
 
     </form>
+    
+    <a href="@Url.Action("FilterCompany", "CompanyPrepago")" class="btn btn-success btn-xs">CompanyPrepago/FilterCompany</a>  
                 
 }
